--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "immutable": "^3.8.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-loader": "^2.4.2",
     "react-notification-system": "^0.2.16",
     "react-notification-system-redux": "^1.1.6",
     "react-redux": "^5.0.6",
