--- a/backend-relay/package.json
+++ b/backend-relay/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cors": "^2.8.4",
     "express": "^4.14.0",
     "lodash": "^4.17.4",
     "method-override": "^2.3.6",
