--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "axios": "^0.17.0",
     "dotenv": "^2.0.0",
     "immutable": "^3.8.2",
     "react": "^15.4.2",
