--- a/backend-relay/package.json
+++ b/backend-relay/package.json
@@ -23,7 +23,8 @@
     "morgan": "^1.8.2",
     "mysql2": "^1.4.2",
     "sequelize": "4.22.1",
-    "sequelize-cli": "3.0.0"
+    "sequelize-cli": "3.0.0",
+    "socket.io": "^2.0.4"
   },
   "devDependencies": {
     "chai": "^4.1.2",
