--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "react-router-dom": "4.2.2",
     "react-router-redux": "4.0.8",
     "redux": "^3.7.2",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "socket.io-client": "^2.0.4"
   },
   "scripts": {
     "start": "node scripts/start.js",
