signatures infrastructure frotend + backend + backend tests

--- a/backend-relay/package.json
+++ b/backend-relay/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cors": "^2.8.4",
+    "eth-sig-util": "^1.4.0",
+    "ethereumjs-util": "^5.1.2",
     "express": "^4.14.0",
     "lodash": "^4.17.4",
     "method-override": "^2.3.6",
