--- a/backend-relay/package.json
+++ b/backend-relay/package.json
@@ -26,7 +26,8 @@
     "mysql2": "^1.4.2",
     "sequelize": "4.22.1",
     "sequelize-cli": "3.0.0",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "truffle-contract": "^1.1.11"
   },
   "devDependencies": {
     "chai": "^4.1.2",
