--- a/backend-relay/package.json
+++ b/backend-relay/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^4.0.1",
+    "rosie": "^1.6.0",
     "sinon": "^4.0.2",
     "supertest": "^3.0.0"
   }
