--- a/backend-relay/package.json
+++ b/backend-relay/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
     "mysql2": "^1.4.2",
+    "seedrandom": "^2.4.3",
     "sequelize": "4.22.1",
     "sequelize-cli": "3.0.0",
     "socket.io": "^2.0.4",
@@ -34,6 +35,7 @@
     "mocha": "^4.0.1",
     "rosie": "^1.6.0",
     "sinon": "^4.0.2",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "timekeeper": "^2.0.0"
   }
 }
