--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "4.2.2",
     "react-router-redux": "4.0.8",
+    "react-timeago": "^3.4.3",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
     "socket.io-client": "^2.0.4"
