--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@ backend-relay/config/config-staging.json
 backend-relay/config/config-production.json
 
 backend-relay/ecosystem.json
+
+# CERTIFICATES
+key.pem
+cert.crt
