save/display username

--- a/package.json
+++ b/package.json
@@ -51,11 +51,13 @@
     "axios": "^0.17.0",
     "dotenv": "^2.0.0",
     "ethereumjs-util": "^5.1.2",
+    "font-awesome": "^4.7.0",
     "immutable": "^3.8.2",
     "lockfile": "^1.0.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-loader": "^2.4.2",
+    "react-modal": "^3.1.2",
     "react-notification-system": "^0.2.16",
     "react-notification-system-redux": "^1.1.6",
     "react-redux": "^5.0.6",
