make backend nginx/cloudfare compatible

--- a/nginx-example.conf
+++ b/nginx-example.conf
@@ -1,11 +1,32 @@
 server {
-   listen 80;
+    listen 80;
+    server_name example.com;
+    rewrite ^ https://$http_host$request_uri? permanent;
+
+    # Enables or disables emitting nginx version on error pages and in the "Server" response header field.
+    server_tokens off;
+}
+
+server {
+   listen 443;
+   ssl on;
+   ssl_certificate /path-to-ethbet-dev/cert.crt;
+   ssl_certificate_key /path-to-ethbet-dev/key.pem;
    server_name example.com;
 
-   location /static/ {
-     alias /example/build_webpack;
+   location / {
+     root /path-to-ethbet-dev/build_webpack;
      gzip_static on;
      expires max;
      add_header Cache-Control public;
+   }
+
+   location /api {
+     proxy_pass https://localhost:9000;
+     proxy_http_version 1.1;
+     proxy_set_header Upgrade $http_upgrade;
+     proxy_set_header Connection 'upgrade';
+     proxy_set_header Host $host;
+     proxy_cache_bypass $http_upgrade;
    }
  }
