--- a/backend-relay/package.json
+++ b/backend-relay/package.json
@@ -16,26 +16,26 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cors": "^2.8.4",
-    "eth-sig-util": "^1.4.0",
-    "ethereumjs-util": "^5.1.2",
+    "eth-sig-util": "^1.4.2",
+    "ethereumjs-util": "^5.1.3",
     "express": "^4.14.0",
     "lodash": "^4.17.4",
     "method-override": "^2.3.6",
-    "moment": "^2.18.1",
+    "moment": "^2.20.1",
     "morgan": "^1.8.2",
-    "mysql2": "^1.4.2",
-    "node-schedule": "^1.2.5",
+    "mysql2": "^1.5.1",
+    "node-schedule": "^1.3.0",
     "seedrandom": "^2.4.3",
     "sequelize": "4.22.1",
     "sequelize-cli": "3.0.0",
     "socket.io": "^2.0.4",
-    "truffle-contract": "^1.1.11"
+    "truffle-contract": "3.0.2"
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^4.0.1",
+    "mocha": "^4.1.0",
     "rosie": "^1.6.0",
-    "sinon": "^4.0.2",
+    "sinon": "^4.2.0",
     "supertest": "^3.0.0",
     "timekeeper": "^2.0.0"
   }
