--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "dotenv": "^2.0.0",
-    "ethereumjs-util": "^5.1.3",
+    "ethereumjs-util": "5.1.2",
     "font-awesome": "^4.7.0",
     "immutable": "^3.8.2",
     "lockfile": "^1.0.3",
