--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "immutable": "^3.8.2",
     "lockfile": "^1.0.3",
     "moment": "^2.20.1",
+    "promisify-es6": "^1.0.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-loader": "^2.4.2",
