--- a/nginx-example.conf
+++ b/nginx-example.conf
@@ -16,6 +16,7 @@ server {
 
    location / {
      root /path-to-ethbet-dev/build_webpack;
+     try_files $uri /index.html =404;
      gzip_static on;
      expires max;
      add_header Cache-Control public;
@@ -28,5 +29,10 @@ server {
      proxy_set_header Connection 'upgrade';
      proxy_set_header Host $host;
      proxy_cache_bypass $http_upgrade;
+
+     proxy_connect_timeout       300;
+     proxy_send_timeout          300;
+     proxy_read_timeout          300;
+     send_timeout                300;
    }
  }
