--- a/truffle.js.example
+++ b/truffle.js.example
@@ -5,5 +5,11 @@ module.exports = {
       port: 8545,
       network_id: "*" // Match any network id
     }
+  },
+  solc: {
+    optimizer: {
+      enabled: true,
+      runs: 200
+    }
   }
 };
