--- a/backend-relay/package.json
+++ b/backend-relay/package.json
@@ -14,6 +14,7 @@
     "db_migrate_test": "NODE_ENV=test ./node_modules/.bin/sequelize db:migrate"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.15.2",
     "cors": "^2.8.4",
     "eth-sig-util": "^1.4.2",
