--- a/backend-relay/package.json
+++ b/backend-relay/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^4.1.0",
+    "nock": "^9.2.5",
     "rosie": "^1.6.0",
     "sinon": "^4.2.0",
     "supertest": "^3.0.0",
