--- a/backend-relay/package.json
+++ b/backend-relay/package.json
@@ -14,33 +14,33 @@
     "db_migrate_test": "NODE_ENV=test ./node_modules/.bin/sequelize db:migrate"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "body-parser": "^1.15.2",
-    "cors": "^2.8.4",
-    "eth-sig-util": "^1.4.2",
-    "ethereumjs-util": "^5.1.3",
-    "express": "^4.14.0",
-    "lodash": "^4.17.4",
-    "method-override": "^2.3.6",
-    "moment": "^2.20.1",
-    "morgan": "^1.8.2",
-    "mysql2": "^1.5.1",
-    "node-schedule": "^1.3.0",
-    "seedrandom": "^2.4.3",
-    "sequelize": "4.22.1",
-    "sequelize-cli": "3.0.0",
-    "socket.io": "^2.0.4",
-    "truffle-contract": "3.0.3",
-    "winston": "^2.4.0",
-    "winston-daily-rotate-file": "^1.7.2"
+    "axios": "0.18.0",
+    "body-parser": "1.18.3",
+    "cors": "2.8.4",
+    "eth-sig-util": "2.1.0",
+    "ethereumjs-util": "5.2.0",
+    "express": "4.16.3",
+    "lodash": "4.17.11",
+    "method-override": "3.0.0",
+    "moment": "2.22.2",
+    "morgan": "1.9.1",
+    "mysql2": "1.6.1",
+    "node-schedule": "1.3.0",
+    "seedrandom": "2.4.4",
+    "sequelize": "4.39.0",
+    "sequelize-cli": "4.1.1",
+    "socket.io": "2.1.1",
+    "truffle-contract": "3.0.6",
+    "winston": "3.1.0",
+    "winston-daily-rotate-file": "3.3.3"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "mocha": "^4.1.0",
-    "nock": "^9.2.5",
-    "rosie": "^1.6.0",
-    "sinon": "^4.2.0",
-    "supertest": "^3.0.0",
-    "timekeeper": "^2.0.0"
+    "chai": "4.2.0",
+    "mocha": "5.2.0",
+    "nock": "10.0.0",
+    "rosie": "2.0.1",
+    "sinon": "6.3.4",
+    "supertest": "3.3.0",
+    "timekeeper": "2.1.2"
   }
 }
